--- a/app/views/prototypes/_error_messages.html.erb
+++ b/app/views/prototypes/_error_messages.html.erb
@@ -2,10 +2,10 @@
 <%# any?メソッドによって、エラーメッセージの有無を判定しています。 %>
 <%# full_messagesメソッドによってエラーメッセージ全件の内容を配列で取得しています。 %>
 
-<% if model.errors.any? %>
+<% if @user.errors.any? %>
 <div class="error-alert">
   <ul>
-    <% model.errors.full_messages.each do |message| %>
+    <% @user.errors.full_messages.each do |message| %>
     <li class='error-message'><%= message %></li>
     <% end %>
   </ul>
