--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,14 @@
           <%# ログインしているときは以下を表示するようにしましょう %>
             <%# <div class="nav__right"> %>
               <%# <%= link_to "ログアウト", root_path, class: :nav__logout %>
-              <%# <%= link_to "New Proto", root_path, class: :nav__btn %>
+              
             <%# </div> %>
           <%# // ログインしているときは上記を表示するようにしましょう %>
           <%# ログインしていないときは以下を表示するようにしましょう %>
             <div class="nav__right">
-              <%= link_to "ログイン", root_path, class: :nav__btn %>
-              <%= link_to "新規登録", root_path, class: :nav__btn %>
+              <%= link_to "New Proto", root_path, class: :nav__btn %>
+              <%#<%= link_to "ログイン", root_path, class: :nav__btn %>
+              <%#<%= link_to "新規登録", root_path, class: :nav__btn %>
             </div>
           <%# // ログインしていないときは上記を表示するようにしましょう %>
         </div>
