--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
           <%# // ログインしているときは上記を表示するようにしましょう %>
           <%# ログインしていないときは以下を表示するようにしましょう %>
             <div class="nav__right">
-              <%= link_to "New Proto", root_path, class: :nav__btn %>
+              <%= link_to "New Proto", new_prototype_path, class: :nav__btn %>
               <%#<%= link_to "ログイン", root_path, class: :nav__btn %>
               <%#<%= link_to "新規登録", root_path, class: :nav__btn %>
             </div>
