--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,12 @@
             <%= link_to image_tag("logo.png", class: :logo), root_path %>
           </div>
           <%# ログインしているときは以下を表示するようにしましょう %>
+          <% if user_signed_in? %>
             <%# <div class="nav__right"> %>
               <%# <%= link_to "ログアウト", root_path, class: :nav__logout %>
               
             <%# </div> %>
+          <% else %>
           <%# // ログインしているときは上記を表示するようにしましょう %>
           <%# ログインしていないときは以下を表示するようにしましょう %>
             <div class="nav__right">
@@ -29,6 +31,7 @@
               <%#<%= link_to "ログイン", root_path, class: :nav__btn %>
               <%#<%= link_to "新規登録", root_path, class: :nav__btn %>
             </div>
+          <% end %>
           <%# // ログインしていないときは上記を表示するようにしましょう %>
         </div>
       </div>
