スペルミスの訂正

--- a/app/views/prototypes/_form.html.erb
+++ b/app/views/prototypes/_form.html.erb
@@ -3,7 +3,7 @@
   <%= render 'error_messages', model: f.object %>
 <%# // 部分テンプレートを呼び出し、インスタンスを渡して、エラー発生時にメッセージが表示されるようにしています %>
   <div class="field">
-    <%= f.label :neme, "プロトタイプの名称" %><br />
+    <%= f.label :name, "プロトタイプの名称" %><br />
     <%= f.text_field :name, id:"prototype_title" %>
   </div>
 
