部分テンプレートの呼び出しの記述の改善

--- a/app/views/prototypes/_form.html.erb
+++ b/app/views/prototypes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @prototype, local: true do |f|%>
+<%= form_with model: prototype, local: true do |f|%>
 <%# 部分テンプレートを呼び出し、インスタンスを渡して、エラー発生時にメッセージが表示されるようにしています %>
   <%= render 'error_messages', model: f.object %>
 <%# // 部分テンプレートを呼び出し、インスタンスを渡して、エラー発生時にメッセージが表示されるようにしています %>
