registration/newファイルとsession/newファイルに<%end%>を追加

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -50,6 +50,7 @@
           <%= f.submit "新規登録", class: :form__btn  %>
         </div>
       <% end %>
+      <% end %>
     </div>
   </div>
 </div>
