--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,9 +7,7 @@
         <%# 「新規登録機能へのパス」は、devise導入後にrails routesを実行してdevise/registrations#createへのパスを確認し、記載してください。 %>
         <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
         <%= devise_error_messages!%>
-
-        <%= form_with model: @user, url: user_registration_path, local: true do |f| %>
-        <%= render partial: "prototypes/error_messages" %>
+        <%= render partial: "prototypes/error_messages", locals:{model: @user} %>
         
         <div class="field">
           <%= f.label :email, "メールアドレス" %><br />
@@ -49,7 +47,6 @@
         <div class="actions">
           <%= f.submit "新規登録", class: :form__btn  %>
         </div>
-      <% end %>
       <% end %>
     </div>
   </div>
