ログイン状況に応じた画面遷移の設定

--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -26,7 +26,7 @@
         <div class="prototype__detail">
           <p class="detail__title">コンセプト</p>
           <p class="detail__message">
-            <%= @prototype.catch_copy %>
+            <%= @prototype.concept %>
           </p>
         </div>
       </div>
