--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -7,8 +7,8 @@
       <%= link_to "by #{@prototype.user.name}", root_path, class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
       <% if user_signed_in? && current_user.id == @prototype.user_id %>
-        <div class="prototype__manage"
-          <%= link_to "編集する", root_path, class: :prototype__btn %>
+        <div class="prototype__manage">
+          <%= link_to "編集する", edit_prototype_path, class: :prototype__btn %>
           <%= link_to "削除する", prototype_path, class: :prototype__btn, method: :delete %>
 
         </div>
