--- a/app/views/prototypes/_form.html.erb
+++ b/app/views/prototypes/_form.html.erb
@@ -26,5 +26,5 @@
     <%= f.submit "保存する", class: :form__btn  %>
   </div>
 
-  <div id="image-list"></div>
+  <div id="image-list" class="card"></div>
 <% end %>
