--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -4,7 +4,7 @@
       <p class="prototype__hedding">
         <%= @prototype.name %>
       </p>
-      <%= link_to "by #{@prototype.user.name}", user_path(current_user.id), class: :prototype__user %>
+      <%= link_to "by #{@prototype.user.name}", user_path(@prototype.user.id), class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
       <% if user_signed_in? && current_user.id == @prototype.user_id %>
         <div class="prototype__manage">
@@ -37,6 +37,10 @@
             <div class="field">
               <%= f.label :text, "コメント" %><br />
               <%= f.text_field :text, id:"comment_text" %>
+            <div class="comment__assessment">
+              <%= f.label :score, "評価" %><br />
+              <%= f.select :score, [["1", "1"], ["2", "2"], ["3","3"], ["4","4"], ["5","5"]], include_blank: "選択して下さい" %>
+            </div>
             </div>
             <div class="actions">
               <%= f.submit "送信する", class: :form__btn  %>
