--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -2,7 +2,7 @@
   <%= link_to image_tag(prototype.image, class: :card__img ), prototype_path(prototype.id) %>
   <%#= image_tag prototype.image, class: :card__img %>
   <div class="card__body">
-    <%= link_to prototype.name, root_path, class: :card__title%>
+    <%= link_to prototype.name, root_path, class: :card__title%> <%= "評価: #{prototype.assessment_ave}" %>
     <p class="card__summary">
       <%= prototype.catch_copy %>
     </p>
