--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -47,9 +47,8 @@
         <div class="actions">
           <%= f.submit "新規登録", class: :form__btn  %>
         </div>
-
-        <%= link_to "Facebookで登録", user_facebook_omniauth_authorize_path, method: :post%>
-        <%= link_to "Googleで登録", user_google_oauth2_omniauth_authorize_path, method: :post%>
+        <%= link_to "Facebookで登録", user_facebook_omniauth_authorize_path, method: :post, class: :sns_link %>
+        <%= link_to "Googleで登録", user_google_oauth2_omniauth_authorize_path, method: :post, class: :sns_link %>
       <% end %>
     </div>
   </div>
