ビューの修正/コードの冗長的な部分の修正

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -224,6 +224,15 @@ a {
   display: flex;
 }
 
+.flex_card{
+  display: flex;
+  justify-content: space-between;
+}
+
+.card__assessment{
+  margin-top: 40px;
+}
+
 .comments_lists{
   padding-left: 20px;
 }
