--- a/app/views/prototypes/_prototype.html.erb
+++ b/app/views/prototypes/_prototype.html.erb
@@ -1,11 +1,16 @@
 <div class="card">
   <%= link_to image_tag(prototype.image, class: :card__img ), prototype_path(prototype.id) %>
   <div class="card__body">
+  <div class="flex_card">
+    <%= link_to prototype.name, root_path, class: :card__title%> 
+    <div class="card__assessment">
     <% if prototype.assessment_ave.nil?%>
-      <%= link_to prototype.name, root_path, class: :card__title%> <%= "平均点: -点" %>
+    <%= "平均点: -点" %>
     <% else %>
-      <%= link_to prototype.name, root_path, class: :card__title%> <%= "平均点: #{prototype.assessment_ave}点" %>
+      <%= "平均点: #{prototype.assessment_ave}点" %>
     <% end %>
+    </div>
+    </div>
     <p class="card__summary">
       <%= prototype.catch_copy %>
     </p>
